# CGALWrapper

./: .gitattributes  .gitignore  CGALFunctions.cpp  CGALGeometryFunction.filters  CGALGeometryFunction.sln  CGALGeometryFunction.vcxproj  CGALGeometryFunction.vcxproj.filters  CGALPolyhedron.cpp  CGALRemeshPolyhedron.cpp  CGALSegmentation.cpp  CGALSkeletonization.cpp  CMakeLists.txt  Face.cpp  Face.h  JSONIncludes.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Polyhedron.cpp  Polyhedron.h  Polyhedrons.cpp  Polyhedrons.h  Polyline.cpp  Polyline.h  Polylines.cpp  Polylines.h  README.md
